// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortItem should render SortItem 1`] = `
<li
  className="places__option "
  onClick={[Function]}
  tabIndex="0"
>
  Popular
</li>
`;

exports[`SortItem should render SortItem with active class 1`] = `
<li
  className="places__option places__option--active"
  onClick={[Function]}
  tabIndex="0"
>
  Popular
</li>
`;
